[package]
name = "webrtctest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gstreamer = "0.24.4"
gstreamer-webrtc = "0.24.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
axum = "0.8.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
async-tungstenite = "0.32.0"
tungstenite = "0.28.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
rand = "0.9.2"
tokio-stream = "0.1.17"
